src/objects/ADvendio__KeyValue__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__FreeformValue__c</fullName>
        <inlineHelpText>If freeform values are allowed, you can enter any value here.</inlineHelpText>
        <label>Freeform Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__KeyLine__c</fullName>
        <label>Key Line</label>
        <referenceTo>ADvendio__KeyLine__c</referenceTo>
        <relationshipLabel>Key Values</relationshipLabel>
        <relationshipName>KeyValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key</label>
        <referenceTo>ADvendio__Key__c</referenceTo>
        <relationshipLabel>Key Values</relationshipLabel>
        <relationshipName>Key_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Value</label>
        <referenceTo>ADvendio__Value__c</referenceTo>
        <relationshipLabel>Key Values</relationshipLabel>
        <relationshipName>KeyValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Values__c</fullName>
        <label>Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Ad_Price__c</fullName>
        <description>Wermittelpreis der zugehörigen Kampagnen-Position</description>
        <formula>CASESAFEID(ADvendio__KeyLine__r.ADvendio__CampaignItem__r.ADvendio__Ad_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wermittelpreis der zugehörigen Kampagnen-Position</inlineHelpText>
        <label>Werbemittelpreis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Campaign_Item__c</fullName>
        <description>Kampagnen-Position (u.a. für Aufschlagsberechnung benötigt)</description>
        <formula>CASESAFEID(ADvendio__KeyLine__r.ADvendio__CampaignItem__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Kampagnen-Position</inlineHelpText>
        <label>Kampagnen-Position</label>
        <type>Text</type>
    </fields>
    <label>Key Value</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__KeyLine__c</columns>
        <columns>ADvendio__Key__c</columns>
        <columns>ADvendio__Values__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Key Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>